Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <button class="cat" onclick="setCat('Ropa',this)"><i class="fa-solid fa-shirt"></i> Ropa</button>
         <button class="cat" onclick="setCat('Comida',this)"><i class="fa-solid fa-utensils"></i> Comida</button>
         <button class="cat cat-fav" onclick="verFavoritos(this)"><i class="fa-solid fa-heart"></i> Favoritos</button>
-        <button class="cat" style="background:var(--azul);color:white" onclick="abrirPerfil()"><i class="fa-solid fa-user-circle"></i> Mi Perfil</button>
+        <button class="cat" style="background:var(--azul);color:white" onclick="abrirPerfil()"><i class="fa-solid fa-user-circle"></i> Mi Tienda</button>
     </div>
 </header>
 
@@ -211,7 +211,7 @@
   </div>
 
 </div>
-        <p>Versión 2.0 Pro · 2026</p>
+        <p>Versión 1.0 Pro · 2026</p>
     </div>
 </div>
 
