--- a/index.html
+++ b/index.html
@@ -775,6 +775,10 @@ document.getElementById('btnVincular').addEventListener('click', async () => {
     }
   }
 });
+    window.aceptarTerminos = () => {
+    localStorage.setItem("terminosAceptados", "si");
+    cerrar();
+};
 </script>
 
 <script>
