--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
         .sold-overlay{position:absolute; top:0; left:0; width:100%; height:160px; background:rgba(0,0,0,0.7); color:white; display:flex; align-items:center; justify-content:center; font-weight:bold; z-index:1}
         .seccion-titulo{grid-column: 1 / -1; font-size: 14px; font-weight: bold; color: var(--mut); margin-top: 15px; border-bottom: 1px solid var(--b); padding-bottom: 5px;}
         
-        /* Estilos nuevos para Auth */
         .auth-container { position: relative; width: 100%; }
         .toggle-eye { position: absolute; right: 12px; top: 12px; cursor: pointer; color: var(--mut); z-index: 5;}
         .link-estudio { text-align: center; color: var(--azul); font-size: 13px; text-decoration: underline; cursor: pointer; margin-top: 5px; display: block;}
@@ -263,7 +262,6 @@
 
 <div id="modalPerfil">
     <div class="modal-content">
-        
         <div id="v-login">
             <h3 style="text-align:center">Entrar a CheroMarket</h3>
             <input id="emailAuth" type="email" placeholder="Correo electrónico">
@@ -369,7 +367,6 @@ const perfilTelefonoInput = document.getElementById('perfilTelefono');
 const imgPerfilPrevia = document.getElementById('imgPerfilPrevia');
 const bannerPerfil = document.getElementById('bannerPerfil');
 
-// NAVEGACIÓN DE SECCIONES EN PERFIL
 window.irSeccion = (s) => {
     document.getElementById('v-login').style.display = s === 'login' ? 'block' : 'none';
     document.getElementById('v-registro').style.display = s === 'registro' ? 'block' : 'none';
@@ -378,7 +375,6 @@ window.irSeccion = (s) => {
     document.getElementById('msgVincular').textContent = "";
 };
 
-// VER CONTRASEÑA
 window.verPassword = (id, icon) => {
     const input = document.getElementById(id);
     if(input.type === "password"){
@@ -403,7 +399,6 @@ onAuthStateChanged(auth, async (user) => {
   await cargar();
 });
 
-// MANEJO AUTH MEJORADO
 window.manejarAuth = async (tipo) => {
     const email = tipo === 'login' ? document.getElementById('emailAuth').value.trim() : document.getElementById('emailReg').value.trim();
     const pass = tipo === 'login' ? document.getElementById('passAuth').value : document.getElementById('passReg').value;
@@ -428,7 +423,6 @@ window.manejarAuth = async (tipo) => {
     }
 };
 
-// RECUPERAR CLAVE
 window.recuperarClave = async () => {
     const email = document.getElementById('emailRecu').value.trim();
     if(!email) return alert("Ingresa tu correo.");
@@ -604,6 +598,7 @@ window.actualizarMunicipios = () => {
     if(svData[d]) svData[d].forEach(mun => m.innerHTML += `<option value="${mun}">${mun}</option>`);
 };
 
+// CORRECCIÓN FUNCIÓN PUBLICAR
 window.publicar = async () => {
     if (!MI_ID) return alert("Inicia sesión.");
 
@@ -615,6 +610,7 @@ window.publicar = async () => {
     const dep = document.getElementById('depto').value;
     const mun = document.getElementById('muni').value;
 
+    // Validación extra para evitar errores de referencia
     if (!t || !p || fotosFinales.length === 0 || !dep || !mun) {
         return alert("Por favor rellena todos los campos.");
     }
@@ -641,11 +637,12 @@ window.publicar = async () => {
             await updateDoc(doc(db, "productos", editandoID), datos);
             alert("¡Anuncio actualizado!");
         } else {
+            // Se asegura de enviar los datos del vendedor actuales
             await addDoc(collection(db, "productos"), {
                 ...datos,
-                vendedor: perfilNombreInput.value,
-                telefono: perfilTelefonoInput.value,
-                fotoPerfilVendedor: fotoPerfilBase64,
+                vendedor: perfilNombreInput.value || "Vendedor Chero",
+                telefono: perfilTelefonoInput.value || "00000000",
+                fotoPerfilVendedor: fotoPerfilBase64 || "",
                 creado: Date.now(),
                 duenoId: MI_ID,
                 oculto: false
@@ -653,10 +650,10 @@ window.publicar = async () => {
             alert("¡Anuncio publicado!");
         }
         cerrar();
-        document.getElementById('sidebar').classList.remove('active');
         await cargar();
     } catch (error) {
-        alert("Error: " + error.message);
+        alert("Error al publicar: " + error.message);
+    } finally {
         btn.disabled = false;
         btn.textContent = editandoID ? "Guardar Cambios" : "Publicar Ahora";
     }
