--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+Ilimitado actualmente 
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -91,6 +93,7 @@
         .sold-overlay{position:absolute; top:0; left:0; width:100%; height:160px; background:rgba(0,0,0,0.7); color:white; display:flex; align-items:center; justify-content:center; font-weight:bold; z-index:1}
         .seccion-titulo{grid-column: 1 / -1; font-size: 14px; font-weight: bold; color: var(--mut); margin-top: 15px; border-bottom: 1px solid var(--b); padding-bottom: 5px;}
         
+        /* Estilos nuevos para Auth */
         .auth-container { position: relative; width: 100%; }
         .toggle-eye { position: absolute; right: 12px; top: 12px; cursor: pointer; color: var(--mut); z-index: 5;}
         .link-estudio { text-align: center; color: var(--azul); font-size: 13px; text-decoration: underline; cursor: pointer; margin-top: 5px; display: block;}
@@ -262,6 +265,7 @@
 
 <div id="modalPerfil">
     <div class="modal-content">
+        
         <div id="v-login">
             <h3 style="text-align:center">Entrar a CheroMarket</h3>
             <input id="emailAuth" type="email" placeholder="Correo electrónico">
@@ -322,7 +326,7 @@
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getFirestore, collection, addDoc, getDocs, doc, query, orderBy, updateDoc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 import { getAuth, onAuthStateChanged, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { where, limit } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
 const firebaseConfig = {
     apiKey:"AIzaSyD-QOvro2aOC8GpPfnQWkBxZCWIR3lypdI",
     authDomain:"cheromarket.firebaseapp.com",
@@ -367,6 +371,7 @@ const perfilTelefonoInput = document.getElementById('perfilTelefono');
 const imgPerfilPrevia = document.getElementById('imgPerfilPrevia');
 const bannerPerfil = document.getElementById('bannerPerfil');
 
+// NAVEGACIÓN DE SECCIONES EN PERFIL
 window.irSeccion = (s) => {
     document.getElementById('v-login').style.display = s === 'login' ? 'block' : 'none';
     document.getElementById('v-registro').style.display = s === 'registro' ? 'block' : 'none';
@@ -375,6 +380,7 @@ window.irSeccion = (s) => {
     document.getElementById('msgVincular').textContent = "";
 };
 
+// VER CONTRASEÑA
 window.verPassword = (id, icon) => {
     const input = document.getElementById(id);
     if(input.type === "password"){
@@ -399,6 +405,7 @@ onAuthStateChanged(auth, async (user) => {
   await cargar();
 });
 
+// MANEJO AUTH MEJORADO
 window.manejarAuth = async (tipo) => {
     const email = tipo === 'login' ? document.getElementById('emailAuth').value.trim() : document.getElementById('emailReg').value.trim();
     const pass = tipo === 'login' ? document.getElementById('passAuth').value : document.getElementById('passReg').value;
@@ -423,6 +430,7 @@ window.manejarAuth = async (tipo) => {
     }
 };
 
+// RECUPERAR CLAVE
 window.recuperarClave = async () => {
     const email = document.getElementById('emailRecu').value.trim();
     if(!email) return alert("Ingresa tu correo.");
@@ -598,7 +606,6 @@ window.actualizarMunicipios = () => {
     if(svData[d]) svData[d].forEach(mun => m.innerHTML += `<option value="${mun}">${mun}</option>`);
 };
 
-// CORRECCIÓN FUNCIÓN PUBLICAR
 window.publicar = async () => {
     if (!MI_ID) return alert("Inicia sesión.");
 
@@ -610,7 +617,6 @@ window.publicar = async () => {
     const dep = document.getElementById('depto').value;
     const mun = document.getElementById('muni').value;
 
-    // Validación extra para evitar errores de referencia
     if (!t || !p || fotosFinales.length === 0 || !dep || !mun) {
         return alert("Por favor rellena todos los campos.");
     }
@@ -637,12 +643,11 @@ window.publicar = async () => {
             await updateDoc(doc(db, "productos", editandoID), datos);
             alert("¡Anuncio actualizado!");
         } else {
-            // Se asegura de enviar los datos del vendedor actuales
             await addDoc(collection(db, "productos"), {
                 ...datos,
-                vendedor: perfilNombreInput.value || "Vendedor Chero",
-                telefono: perfilTelefonoInput.value || "00000000",
-                fotoPerfilVendedor: fotoPerfilBase64 || "",
+                vendedor: perfilNombreInput.value,
+                telefono: perfilTelefonoInput.value,
+                fotoPerfilVendedor: fotoPerfilBase64,
                 creado: Date.now(),
                 duenoId: MI_ID,
                 oculto: false
@@ -650,10 +655,10 @@ window.publicar = async () => {
             alert("¡Anuncio publicado!");
         }
         cerrar();
+        document.getElementById('sidebar').classList.remove('active');
         await cargar();
     } catch (error) {
-        alert("Error al publicar: " + error.message);
-    } finally {
+        alert("Error: " + error.message);
         btn.disabled = false;
         btn.textContent = editandoID ? "Guardar Cambios" : "Publicar Ahora";
     }
@@ -743,13 +748,8 @@ window.verMisAnuncios = () => {
 
 async function cargar() {
     try {
-        const q = query(
-    collection(db, "productos"),
-    where("oculto", "==", false),
-    orderBy("creado", "desc"),
-    limit(30)
-);
-const snap = await getDocs(q);
+        const q = query(collection(db, "productos"), orderBy("creado", "desc"));
+        const snap = await getDocs(q);
         productos = snap.docs.map(d => ({ id: d.id, ...d.data() })).filter(p => !p.oculto);
         render(productos);
     } catch(e) { console.error("Error cargando productos:", e); }
